log
Fri 09 Sep 2022 04:31:48 PM UTC: 
 tests:  0|6
total_score: 0/70
a8edd5a
Fri 09 Sep 2022 04:48:19 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8c255f3
Fri 09 Sep 2022 05:02:20 PM UTC: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:10: error: unused variable ‘new’ [-Werror=unused-variable]
   43 |   Pair * new = createPair(key, value);
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
d84b1d8
Fri 09 Sep 2022 05:02:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:10: error: unused variable ‘new’ [-Werror=unused-variable]
   43 |   Pair * new = createPair(key, value);
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
201f607
Fri 09 Sep 2022 05:02:41 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ec2a8cf
Fri 09 Sep 2022 05:17:01 PM UTC: 
 hashmap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
3704d11
Fri 09 Sep 2022 05:17:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:42: error: invalid type argument of ‘->’ (have ‘long int’)
   46 |     if(!map->buckets[i] || !map->capacity->key){
      |                                          ^~
Compilation failed
fe81b84
Fri 09 Sep 2022 05:18:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:44: error: invalid operands to binary - (have ‘int’ and ‘char *’)
   46 |     if(!map->buckets[i] || !map->buckets[i]-key){
      |                            ~~~~~~~~~~~~~~~~^
      |                            |
      |                            int
Compilation failed
b3651f7
Fri 09 Sep 2022 05:18:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
bbb8baa
